# larousse_api

./: README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: compile.yml  pylint.yml
larousse_api/: __init__.py  larousse.py
tests/: test_larousse.py
